# backend/api/handlers/events.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/darth-raijin/borealis/api/models/dtos"
@@ -13,9 +14,9 @@ import (
 // @Tags Event
 // @Accept json
 // @Produce json
-// @Success 200 {object} dtos.Response{data=dtos.Event}
+// @Param id query string true "id for fetching given event"
 // @Failure 404 {object} dtos.Response{}
-// @Router /api/v1/events [get]
+// @Router /api/v1/events/{id} [get]
 func GetEventById(c *fiber.Ctx) error {
 	return c.Status(http.StatusServiceUnavailable).JSON(dtos.Response{
 		DomainErrorCode: 5001,
@@ -30,11 +31,18 @@ func GetEventById(c *fiber.Ctx) error {
 // @Tags Event
 // @Accept json
 // @Produce json
-// @Success 200 {object} dtos.Response{data=dtos.Event}
+// @Param Event body dtos.Event true "Required parameters to create an event"
+// @Success 200 {object} dtos.Event{}
 // @Failure 404 {object} dtos.Response{}
 // @Failure 419 {object} dtos.Response{}
-// @Router /api/v1/events [get]
+// @Router /api/v1/events [post]
 func CreateEvent(c *fiber.Ctx) error {
+	payload := new(dtos.Event)
+	if err := c.BodyParser(payload); err != nil {
+		fmt.Println(err)
+		return err
+	}
+
 	return c.Status(http.StatusServiceUnavailable).JSON(dtos.Response{
 		DomainErrorCode: 5002,
 		Message:         "No worky worky",
